# trades-result

./: .gitignore  pyproject.toml  setup.cfg
scripts/: trade_gain_loss.sh  trade_load_data.sh  trade_transaction.sh
src/my_trades/: database.py  gain_loss.py  logger.py  record.py  transaction.py
src/my_trades/db/: schema.py
tests/: test_db_schema.py
