[tool.poetry]
name = "my_trades"
version = "0.1.0"
description = ""
authors = ["nycnighthawk"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
