[tool.poetry]
name = "my_trades"
version = "0.1.0"
description = ""
authors = ["nycnighthawk"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
isort = "^5.12.0"
click = "8.0.1"
blue = "^0.9.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
